tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_generic_count_on_struct_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Foo expects 0 generics but 1 was given
  ┌─ src/main.nr:3:14
  │
3 │     impl <T> Foo<T> {}
  │              ---
  │

Aborting due to 1 previous error
